--- a/website/frontend/styles/ResearchPage.scss
+++ b/website/frontend/styles/ResearchPage.scss
@@ -60,7 +60,6 @@
     background: $aq-green-0;
     border-radius: 8px;
     padding: 10px;
-    margin-top: 48px;
     margin-bottom: 42px;
 
     >* {
@@ -138,7 +137,7 @@
 
   .research-content {
     width: 100%;
-    min-height: 2084px;
+    margin-bottom: 160px;
     padding: 10px;
 
     .content-intro {
@@ -212,7 +211,7 @@
         .img-small {
           align-self: center;
           width: 100%;
-          height: 100%;
+          height: 231px;
           object-fit: cover;
           border-radius: 8px;
         }
@@ -343,8 +342,37 @@
 
 @media(max-width: $mainBreakPoint) {
   .ResearchPage {
+    overflow-x: visible;
     .research-content {
+      margin-bottom: 80px;
+      .research-divider {
+        margin: 64px auto;
+      }
       .consult-container {
+        .consult-text {
+          margin-bottom: 44px;
+        }
+        .consult-images {
+          display: block;
+          height: auto;
+          
+          .img-small {
+            display: block;
+            width: 100%;
+            height: 231px;
+            object-fit: cover;
+            margin-bottom: 24px;
+          }
+
+          .img-long {
+            display: none;
+          }
+        }
+      }
+      .collaborate-container {
+        .consult-text {
+          margin-bottom: 44px;
+        }
         .consult-images {
           display: block;
           height: auto;
